# rustoku

./: Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  ui.rs  update.rs
src/sudoku/: board.rs  game.rs  generator.rs  mod.rs
